--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_list_grid_view.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_list_grid_view.xml
@@ -47,6 +47,24 @@
         android:layout_height="match_parent"
         android:layout_marginTop="10dp">
 
+        <com.github.evan.common_utils.ui.view.LoadingPager
+            android:id="@+id/loadingPager_list_grid_view_fragment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:isLoadingWithRotateAnimation="true"
+            app:loadingText="@string/loading_pager_loading"
+            app:loadEmptyText="@string/loading_pager_empty_data"
+            app:netUnAvailableText="@string/loading_pager_net_unavailable"
+            app:netTimeoutText="@string/loading_pager_net_timeout"
+            app:unknownText="@string/loading_pager_unknown_error"
+            app:loadEmptyDrawable="@mipmap/status_empty_data"
+            app:loadingDrawable="@mipmap/status_loading"
+            app:netTimeoutDrawable="@mipmap/status_net_timeout"
+            app:netUnAvailableDrawable="@mipmap/status_net_unavailable"
+            app:noSearchContentDrawable="@mipmap/status_no_search_content"
+            app:unknownDrawable="@mipmap/status_unknown_error" />
+
         <ListView
             android:id="@+id/list_view"
             android:layout_width="match_parent"
