--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_listview_nest_multi_horizontal.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_listview_nest_multi_horizontal.xml
@@ -16,10 +16,16 @@
 
 
     <com.github.evan.common_utils.ui.view.LoadingPager
-        android:id="@+id/loadingPager_list_view_nest_multi_horizontal_fragment"
+        android:id="@+id/loading_pager_list_view_nest_multi_horizontal_fragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        app:isLoadingWithRotateAnimation="true"
+        app:loadingText="@string/loading_pager_loading"
+        app:loadEmptyText="@string/loading_pager_empty_data"
+        app:netUnAvailableText="@string/loading_pager_net_unavailable"
+        app:netTimeoutText="@string/loading_pager_net_timeout"
+        app:unknownText="@string/loading_pager_unknown_error"
         app:loadEmptyDrawable="@mipmap/status_empty_data"
         app:loadingDrawable="@mipmap/status_loading"
         app:netTimeoutDrawable="@mipmap/status_net_timeout"
