--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_recycler_view.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_recycler_view.xml
@@ -10,9 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        app:tabTextAppearance="@style/TabItemTextAppearance_White"
         app:tabGravity="fill"
-        app:tabMode="fixed">
+        app:tabMode="fixed"
+        app:tabTextAppearance="@style/TabItemTextAppearance_White">
 
         <android.support.design.widget.TabItem
             android:id="@+id/radio_btn_list_mode"
@@ -42,12 +42,37 @@
 
     </android.support.design.widget.TabLayout>
 
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="10dp">
+
+        <com.github.evan.common_utils.ui.view.LoadingPager
+            android:id="@+id/loading_pager_recycler_view_fragment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:isLoadingWithRotateAnimation="true"
+            app:loadEmptyDrawable="@mipmap/status_empty_data"
+            app:loadEmptyText="@string/loading_pager_empty_data"
+            app:loadingDrawable="@mipmap/status_loading"
+            app:loadingText="@string/loading_pager_loading"
+            app:netTimeoutDrawable="@mipmap/status_net_timeout"
+            app:netTimeoutText="@string/loading_pager_net_timeout"
+            app:netUnAvailableDrawable="@mipmap/status_net_unavailable"
+            app:netUnAvailableText="@string/loading_pager_net_unavailable"
+            app:noSearchContentDrawable="@mipmap/status_no_search_content"
+            app:unknownDrawable="@mipmap/status_unknown_error"
+            app:unknownText="@string/loading_pager_unknown_error" />
+
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+
+    </FrameLayout>
+
 
 </LinearLayout>
