--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_view_pager.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_view_pager.xml
@@ -14,10 +14,37 @@
         app:tabMode="scrollable"
         app:tabTextAppearance="@style/TabItemTextAppearance_White" />
 
-    <com.github.evan.common_utils.ui.view.nestingTouchView.NestingViewPager
-        android:id="@+id/nesting_view_pager_view_pager_fragment"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:nesting_view_pager_touch_intercept_mode="horizontal" />
+        android:layout_height="match_parent">
+
+        <com.github.evan.common_utils.ui.view.LoadingPager
+            android:id="@+id/loading_pager_view_pager_fragment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:isLoadingWithRotateAnimation="true"
+            app:loadEmptyDrawable="@mipmap/status_empty_data"
+            app:loadEmptyText="@string/loading_pager_empty_data"
+            app:loadingDrawable="@mipmap/status_loading"
+            app:loadingText="@string/loading_pager_loading"
+            app:netTimeoutDrawable="@mipmap/status_net_timeout"
+            app:netTimeoutText="@string/loading_pager_net_timeout"
+            app:netUnAvailableDrawable="@mipmap/status_net_unavailable"
+            app:netUnAvailableText="@string/loading_pager_net_unavailable"
+            app:noSearchContentDrawable="@mipmap/status_no_search_content"
+            app:unknownDrawable="@mipmap/status_unknown_error"
+            app:unknownText="@string/loading_pager_unknown_error" />
+
+
+        <com.github.evan.common_utils.ui.view.nestingTouchView.NestingViewPager
+            android:id="@+id/nesting_view_pager_view_pager_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:nesting_view_pager_touch_intercept_mode="horizontal" />
+
+
+    </FrameLayout>
+
 
 </LinearLayout>
