修复StaggeredGridHolder布局未填充问题。

--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/item_staggered_grid.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/item_staggered_grid.xml
@@ -2,8 +2,9 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout_root_staggered_grid_holder"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    app:cardBackgroundColor="@color/White"
     app:cardCornerRadius="5dp"
     app:cardElevation="5dp"
     app:cardPreventCornerOverlap="false"
@@ -34,8 +35,8 @@
 
         <com.github.evan.common_utils.ui.view.imageView.RoundedImageView
             android:id="@+id/img_preview_layout_root_staggered_grid_holder"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:scaleType="centerCrop"
             android:src="@mipmap/img_video_preview"
             app:riv_corner_radius="5dp" />
