--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/item_staggered_grid.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/item_staggered_grid.xml
@@ -2,8 +2,8 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout_root_staggered_grid_holder"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     app:cardBackgroundColor="@color/White"
     app:cardCornerRadius="5dp"
     app:cardElevation="5dp"
