--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_slide_exit_demo.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_slide_exit_demo.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/Gray"
@@ -10,10 +9,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="@string/about"
-        android:textColor="@color/White"
+        android:text="@string/debug"
+        android:textColor="@color/text_color_white"
         android:textSize="18sp" />
 
 </LinearLayout>
