--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_slide_exit_demo.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_slide_exit_demo.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.github.evan.common_utils.ui.view.slideExitView.SlideExitLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/slide_exit_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/Gray"
-    android:gravity="center"
     android:orientation="vertical">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/txt_desc_slide_exit_demo_activity"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
         android:text="@string/debug"
         android:textColor="@color/text_color_white"
         android:textSize="18sp" />
 
-</LinearLayout>
+</com.github.evan.common_utils.ui.view.slideExitView.SlideExitLayout>
