--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_slide_exit_activity.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_slide_exit_activity.xml
@@ -105,6 +105,29 @@
         </android.support.v7.widget.CardView>
 
 
+<!--        <android.support.v7.widget.CardView
+            android:id="@+id/card_slide_exit_multi_nesting"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:cardPreventCornerOverlap="false"
+            app:cardUseCompatPadding="true"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="@string/slide_exit_multi_nesting_demo"
+                android:textColor="@color/text_color_black"
+                android:textSize="16sp" />
+
+        </android.support.v7.widget.CardView>-->
+
+
     </android.support.v7.widget.GridLayout>
 
 
