--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/item_pay_attention.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/item_pay_attention.xml
@@ -33,7 +33,7 @@
             android:textSize="16sp"
             tools:text="@string/girl_channel" />
 
-        <Button
+        <TextView
             android:id="@+id/btn_pay_attention_holder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -41,7 +41,13 @@
             android:layout_marginTop="10dp"
             android:background="@drawable/selector_common_red_button"
             android:gravity="center"
-            android:text="@string/pay_attention" />
+            android:paddingBottom="5dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="5dp"
+            android:text="@string/pay_attention"
+            android:textColor="@color/text_color_white"
+            android:textSize="12sp" />
 
     </LinearLayout>
 
