--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_multi_nesting.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_multi_nesting.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.github.evan.common_utils.ui.view.slideExitView.SlideExitLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/slide_exit_layout_multi_nesting_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/White">
