--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_multi_nesting.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_multi_nesting.xml
@@ -16,7 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:nesting_tab_layout_handle_parallel_Slide="true"
-            app:nesting_tab_layout_touch_intercept_mode="all_by_myself_but_threshold"
+            app:nesting_tab_layout_is_nested_in_same_intercept_mode_parent="true"
+            app:nesting_tab_layout_touch_intercept_mode="horizontal_but_threshold"
             app:tabGravity="fill"
             app:tabMode="scrollable" />
 
@@ -35,6 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:nesting_view_pager_handle_parallel_Slide="true"
+                app:nesting_view_pager_is_nested_in_same_intercept_mode_parent="true"
                 app:nesting_view_pager_touch_intercept_mode="horizontal_but_threshold" />
 
         </FrameLayout>
