--- a/CommonLibProject/CommonUtils/src/main/res/values/attrs.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/values/attrs.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <declare-styleable name="SlideExitLayout">
+        <attr name="slide_exit_direction" format="enum">
+            <enum name="left_to_right" value="0"/>
+            <enum name="right_to_left" value="1"/>
+            <enum name="top_to_bottom" value="2"/>
+            <enum name="bottom_to_top" value="3"/>
+        </attr>
+        <attr name="slide_percent_when_not_exit" format="float"/>
+        <attr name="roll_back_animation_duration" format="integer"/>
+        <attr name="slide_exit_animation_duration" format="integer"/>
+    </declare-styleable>
+
     <declare-styleable name="ScannerView">
         <attr name="rim_long" format="dimension"/>
         <attr name="rim_width" format="dimension"/>
